[gd_scene load_steps=4 format=3 uid="uid://b73yex8spv0r8"]

[ext_resource type="Theme" uid="uid://6t6lb86owifs" path="res://common/themes/default_theme.tres" id="1_e1ev6"]
[ext_resource type="Script" path="res://scenes/main_menu/MainMenu.gd" id="1_wf608"]

[sub_resource type="LabelSettings" id="LabelSettings_hiqcg"]
font_size = 100

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_e1ev6")
script = ExtResource("1_wf608")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -79.0
offset_top = -49.0
offset_right = 2133.0
offset_bottom = 1223.0
color = Color(0.278431, 0.552941, 0.619608, 1)

[node name="Label" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.436
anchor_top = 0.389
anchor_right = 0.436
anchor_bottom = 0.389
offset_left = 12.8801
offset_top = -74.1201
offset_right = 222.88
offset_bottom = 65.8799
text = "NAB"
label_settings = SubResource("LabelSettings_hiqcg")

[node name="local_multiplayer" type="Button" parent="."]
offset_left = 890.0
offset_top = 569.0
offset_right = 1031.0
offset_bottom = 600.0
text = "Local Multiplayer"

[node name="Practice" type="Button" parent="."]
offset_left = 923.0
offset_top = 518.0
offset_right = 993.0
offset_bottom = 549.0
text = "Practice"

[connection signal="pressed" from="local_multiplayer" to="." method="_on_local_multiplayer_pressed"]
[connection signal="pressed" from="Practice" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Practice" to="." method="_on_practice_pressed"]
